# serializer version: 1
# name: test_integration_test_with_color
  '''
  file4.js:[1m1[0m:[37m// This is a second updated example JavaScript file[39;49;00m[37m[39;49;00m
  
  '''
# ---
# name: test_integration_test_with_color_and_bat
  list([
    'bat /normalized_path/file4.js --line-range 1:1 --file-name file4.js',
  ])
# ---
# name: test_integration_test_without_color
  '''
  file4.js:1:// This is a second updated example JavaScript file
  
  '''
# ---
# name: test_server_is_not_running_error[/another/path/to/repo2]
  '''
  The SeaGOAT server is not running. Please start the server using the following command:
  
  seagoat-server start /another/path/to/repo2
  
  
  '''
# ---
# name: test_server_is_not_running_error[/path/to/repo1]
  '''
  The SeaGOAT server is not running. Please start the server using the following command:
  
  seagoat-server start /path/to/repo1
  
  
  '''
# ---
